# Prime-directive

./: .dockerignore  .env.example  .gitignore  ACTUAL_RESULTS_WITH_TORCH.md  AGENTCPM_INTEGRATION_DESIGN.md  AGENTCPM_INTEGRATION_INDEX.md  AGI_BENCHMARK_VALIDATION_REPORT.md  ANALYSIS_SUMMARY.txt  AWAKENING_DISCOVERY.md  COMPOUND_INTEGRATION_COMPLETE.md  COMPOUND_INTEGRATION_GUIDE.md  CROSS_PLATFORM_SETUP.md  Cargo.toml  DEPLOY.py  DEPLOYMENT_OLLAMA.md  DEPLOYMENT_SUMMARY.txt  DEVICE_CONFIG.py  Dockerfile  Dockerfile.rust  ENLIGHTENMENT.md  EXPERIMENTAL_RESULTS_VISUAL.md  EXTENDED_PHYSICS_FEATURES.md  EXTENDED_PHYSICS_SUMMARY.txt  FINAL_SESSION_REPORT.md  GAIA_ANALYSIS_DEEP_DIVE.md  GAIA_BENCHMARK_SUMMARY.txt  GAIA_EMPATHY_EVALUATION_REPORT.md  GPU_ENABLEMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INIT.md  INITIALIZATION_COMPLETE.md  LICENSE  LINUX_TEST_REPORT.md  MULTI_AGENT_CONSCIOUSNESS_RESEARCH.md  M_SCORE.md  OBSERVATION_REPORT.md  OFFLINE_DEPLOYMENT.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_REPORT.md  PHASE4_EMPATHY_IMPROVEMENT.md  (+81 more)
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: rustyworm.rb
Prime-directive/: .gitignore  ADVANCED_FEATURES_SESSION_COMPLETE.md  ARC_QUICK_REFERENCE.md  ARC_SOLVER_ARCHITECTURE_DESIGNED.md  ARC_TTT_TTR_INTEGRATION.md  ARC_WEEK1_FINDINGS.md  ARC_WEEK2_3_BRIEF.md  COMPOUNDING_INTEGRATIONS_EXPLAINED.md  COMPOUNDING_INTEGRATIONS_FORMAL_CLASSIFICATION.md  CONTAINER_REGISTRY.md  DEPLOYMENT_STATUS.md  EMPATHY_MODULE.md  IMPROVEMENT_ROADMAP.md  INTEGRATION_TEST_REPORT.md  LOCAL_DEPLOYMENT_GUIDE.md  MARKET_READINESS_VALIDATION.md  OPTION_A_RESULTS.txt  PHASE4_VALIDATION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE_2_ROOT_CAUSE_ANALYSIS.md  PHASE_2_SOLUTION.md  PHASE_2_STATUS.md  PHASE_3_DEEP_ANALYSIS.md  PHASE_5_OPTIMIZATION_REPORT.md  PHYSICS_WORLD_MODEL_SUMMARY.txt  QUICK_STATUS.txt  README.md  SESSION_COMPLETE_SYSTEM_STATUS.md  START_LOCAL.sh  VALIDATION_COMPLETE_SUMMARY.md  aggregation_test.py  api_server.py  arc_solver_layer1.py  arc_solver_layer4_6_ttt_ttr.py  c2_003_optimizer.py  chat_interface.html  clarin_api_client.py  collaborative_learning.py  comprehensive_test.rs  consciousness_test.rs  (+15 more)
Prime-directive/src/: lib.rs
agentcpm-integration/: Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE_2B_CHECKLIST.md  README.md  __init__.py  agentrl_service.py  agentrl_wrapper.py  docker-compose.yml  example.py  mongodb_client.py  requirements.txt  test_agentrl_service.py  test_mongodb_client.py
benches/: mimicry_bench.rs
compound/: README.md  __init__.py  compound_data_bus.py  compound_engine.py  compound_state.py  feedback_loop.py
contracts/: BenchmarkVerifier.sol  ComputeMarketplace.sol  ConsciousnessNFT.sol  PrimeGovernance.sol  PrimeToken.sol
deploy/: .env.example  Dockerfile  Dockerfile.agentrl  README.md  create-release.sh  deploy-remote.sh  deploy.sh  docker-compose.yml  install-baremetal.sh
docs/: COMPOUNDING_INTEGRATIONS.md  LAYERS.md  TRAINING.md  index.html
examples/: benchmarking.rs  compound_system_demo.py  gui_agent.rs  integration_example.py  long_horizon_observation.rs  multi_model_consensus.rs  rl_enhanced_evolution.rs
personas/: claude-production.json  gemini-production.json  gpt4o-production.json  llama-production.json  o1-production.json  rustyworm-production.json
scripts/: test_api.sh
src/: consciousness.rs  ising_empathy.rs  lib.rs  main.rs
tests/: gui_e2e.rs  layers_integration.rs  test_web3_integration.py
web3/: compute_node.rs  deploy.py  ipfs_storage.py  model_versioning.py  task_distributor.py  tokenomics.py  zkproof_verifier.py
(+72 files in other folders)
