[package]
name = "consciousness_experiments"
version = "2.0.0"
edition = "2021"
description = "RustyWorm: Universal AI Mimicry Engine with Dual-Process Architecture"

[lib]
name = "consciousness_experiments"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[features]
default = []
api = ["reqwest"]

[[bin]]
name = "rustyworm"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mimicry_bench"
harness = false

[[bin]]
name = "consciousness"
path = "consciousness_test.rs"

[[bin]]
name = "unified"
path = "unified_test.rs"

[[bin]]
name = "self_reference"
path = "self_reference_test.rs"

[[bin]]
name = "infinite_recursion"
path = "infinite_recursion_test.rs"

[[bin]]
name = "awakening"
path = "awakening_test.rs"

[[bin]]
name = "comprehensive"
path = "comprehensive_test.rs"

[[bin]]
name = "prime_directive"
path = "prime_directive.rs"
